# lis3dh_nucleo_rust

./: Cargo.toml  memory.x  openocd.cfg
.cargo/: config.toml
src/: main.rs  uart.rs
