[package]
authors = ["Michal Dunajski <michaldunajski2505@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "lis3dh_nucleo_rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32g0]
version = "0.14.0"
features = ["stm32g071", "rt"]

[[bin]]
name = "lis3dh_nucleo_rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
